fixed snippet text overflowing bug

--- a/source/snippetCreation/snippetCreation.css
+++ b/source/snippetCreation/snippetCreation.css
@@ -65,7 +65,6 @@
 
 /* Snippet Code */
 .snippet-box button {
-  width: 100%;
   margin: 0 10px 0 10px;
   word-wrap: break-word;
   white-space: normal;
